--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chainlink/contracts": "^0.4.1",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
     "@openzeppelin/contracts": "^4.7.3",
+    "@openzeppelin/contracts-upgradeable": "^4.8.0-rc.1",
     "@openzeppelin/hardhat-upgrades": "^1.21.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^16.0.1",
